Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.0.0 Beta 1, 5.0.0 Beta 2
-
Fix Version/s: 5.0.0 RC 1
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:None
-
Commits:027168168cb94ed4521816dc98ffcae4268d555a
Description
running the following test case gives error message: "QWidget: Cannot create a QWidget when no GUI is being used
Aborted (core dumped)
"
But don't see the reason from the doc.
#include <QGuiApplication>
#include <QWidget>
int main( int argc, char* argv[])
{
QGuiApplication a(argc,argv);
QWidget w;
w.show();
return a.exec();
}
Attachments
Issue Links
- relates to
-
QTBUG-28093 QCoreApplication::Type vs. QApplication::type()
-
- Closed
-
For Gerrit Dashboard: QTBUG-28076 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
40341,1 | QWidgetPrivate::init(): clarify that QWidget requires QApplication | master | qt/qtbase | Status: MERGED | +2 | 0 |
40781,1 | QGuiApplication docs: clarify that QWidget needs QApplication | master | qt/qtbase | Status: MERGED | +2 | 0 |