QWidgetPrivate::init(): clarify that QWidget requires QApplication

Task-number: QTBUG-28076
Change-Id: Ica9713894c18bb43ae817a6dd42be087b23fa8c2
Reviewed-by: Jing Bai <jing.bai@digia.com>

cregit: 91fa2e0a5360d9056960fb02f7a5f08a3d277cba https://github.com/qt/qtbase/commit/91fa2e0a5360d9056960fb02f7a5f08a3d277cba